Fix tab overflow

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 /* Header configuration */
 
 /* Main logo display */
